build/log/idf_py_stdout_output_30104
[1/63] Building C object esp-idf/espressif__openai/CMakeFiles/__idf_espressif__openai.dir/OpenAI.c.obj
FAILED: esp-idf/espressif__openai/CMakeFiles/__idf_espressif__openai.dir/OpenAI.c.obj 
F:\Espressif\tools\xtensa-esp32s3-elf\esp-12.2.0_20230208\xtensa-esp32s3-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.2-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/temp/esp-box/examples/chatgpt_demo/build/config -ID:/temp/esp-box/examples/chatgpt_demo/components/espressif__openai/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/newlib/platform_include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/FreeRTOS-Kernel/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/esp_additions/include/freertos -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/esp_additions/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/esp_additions/arch/xtensa/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/include/soc -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/include/soc/esp32s3 -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/port/esp32s3/. -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/port/esp32s3/private_include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/heap/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/log/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/soc/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/soc/esp32s3 -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/soc/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/hal/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/hal/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/hal/platform_port/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_rom/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_rom/include/esp32s3 -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_rom/esp32s3 -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_common/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_system/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_system/port/soc -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_system/port/include/private -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/xtensa/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/xtensa/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/include/apps -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/include/apps/sntp -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/lwip/src/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/port/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/port/freertos/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/port/esp32xx/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/port/esp32xx/include/arch -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/tcp_transport/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp-tls -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp-tls/esp-tls-crypto -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/mbedtls/port/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/mbedtls/mbedtls/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/mbedtls/mbedtls/library -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/mbedtls/mbedtls/3rdparty/everest/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/mbedtls/mbedtls/3rdparty/p256-m -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_timer/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_http_client/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_event/include -IF:/Espressif/frameworks/esp-idf-v5.1.2/components/json/cJSON -mlongcalls  -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=D:/temp/esp-box/examples/chatgpt_demo=. -fmacro-prefix-map=F:/Espressif/frameworks/esp-idf-v5.1.2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -DOPENAI_VER_MAJOR=0 -DOPENAI_VER_MINOR=1 -DOPENAI_VER_PATCH=2 -MD -MT esp-idf/espressif__openai/CMakeFiles/__idf_espressif__openai.dir/OpenAI.c.obj -MF esp-idf\espressif__openai\CMakeFiles\__idf_espressif__openai.dir\OpenAI.c.obj.d -o esp-idf/espressif__openai/CMakeFiles/__idf_espressif__openai.dir/OpenAI.c.obj -c D:/temp/esp-box/examples/chatgpt_demo/components/espressif__openai/OpenAI.c
D:/temp/esp-box/examples/chatgpt_demo/components/espressif__openai/OpenAI.c: In function 'OpenAI_Request':
D:/temp/esp-box/examples/chatgpt_demo/components/espressif__openai/OpenAI.c:2184:30: error: 'esp_crt_bundle_attach' undeclared (first use in this function)
 2184 |         .crt_bundle_attach = esp_crt_bundle_attach,
      |                              ^~~~~~~~~~~~~~~~~~~~~
D:/temp/esp-box/examples/chatgpt_demo/components/espressif__openai/OpenAI.c:2184:30: note: each undeclared identifier is reported only once for each function it appears in
[2/63] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/examples/widgets/tabview/lv_example_tabview_1.c.obj
[3/63] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/examples/widgets/table/lv_example_table_2.c.obj
[4/63] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/examples/widgets/roller/lv_example_roller_3.c.obj
[5/63] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/examples/widgets/tabview/lv_example_tabview_2.c.obj
[6/63] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/examples/widgets/spinner/lv_example_spinner_1.c.obj
[7/63] cmd.exe /C "cd /D D:\temp\esp-box\examples\chatgpt_demo\build\esp-idf\main && F:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe F:/Espressif/frameworks/esp-idf-v5.1.2/components/spiffs/spiffsgen.py 0x200000 D:/temp/esp-box/examples/chatgpt_demo/spiffs D:/temp/esp-box/examples/chatgpt_demo/build/storage.bin --page-size=256 --obj-name-len=32 --meta-len=4 --use-magic --use-magic-len"
[8/63] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\temp\esp-box\examples\chatgpt_demo\build\bootloader\esp-idf\esptool_py && F:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe F:/Espressif/frameworks/esp-idf-v5.1.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/temp/esp-box/examples/chatgpt_demo/build/bootloader/bootloader.bin"
Bootloader binary size 0x5770 bytes. 0x2890 bytes (32%) free.
ninja: build stopped: subcommand failed.
